fix: emoji not showing up in FF

--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,16 @@ body {
 }
 
 body {
-    font-family:
-        'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-        'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+body,
+span,
+input {
+    font-family:
+        'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+        'Droid Sans', sans-serif;
 }
 
 #root {
